--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="row">
-    <!-- Mettez ici le composant exercice 1 -->
+    <exercice1></exercice1>
   </div>
   <div class="row">
     <app-exercice2></app-exercice2>
   </div>
   <div class="row">
-    <!-- Mettez ici le composant exercice 3 -->
+    <exercice3></exercice3>
   </div>
   <div class="row">
-      <!-- Mettez ici le composant exercice 3 -->
+    <exercice4></exercice4>
     </div>
 </div>
